--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "framer-motion": "^10.10.0",
     "random-words": "^1.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-easy-swipe": "^0.0.23"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
