--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.19.1",
     "framer-motion": "^10.10.0",
     "random-words": "^1.3.0",
     "react": "^18.2.0",
